# cdoctest

./: .gitignore  1.build.bat  1.build_and_publish.bat  2.build_linux_clangrepl.sh  2.build_win_clangrepl.bat  README.kr.md  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json
cdoctest/: __init__.py  __main__.py  c_doctest.py  cdoctest.py  cmake_api.py  sample.h
cdoctest/cmake/: cdoctestConfig.cmake.in
clang_repl_kernel/: __init__.py  install.py  install_test.py  kernel.py  test_kernel.py
src/: CDocTest.ts  index.ts  main.py
src/interfaces/: CMakeApi.ts
src/models/: Test.ts
src/parsers/: CppParser.ts
src/services/: CoverageReporter.ts  TestRunner.ts
test/: build.bat  build.sh  cdoctest_test.py  dummy.h  sample.cpp  sample.h  sample_clanglib.py
test/cdoctest/: cmake_api_test.py
test/cdoctest/cmake/: CMakeLists.txt  build.bat  build.sh  sample.cpp  sampleMain.cpp  toolchain.cmake
test/cdoctest/cmake/include/: sample.h
tests/: CDocTest.test.ts  index.test.ts  test_main.py
tests/fixtures/cpp/: CMakeLists.txt  calculator.cpp  calculator.hpp  math_utils.cpp  math_utils.hpp  test_main.cpp
tests/interfaces/: CMakeApi.test.ts
tests/models/: Test.test.ts
tests/parsers/: CppParser.test.ts
tests/services/: CoverageReporter.test.ts
tests/system/: CompilationTest.test.ts  DocTestIntegration.test.ts
